--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -49,6 +49,7 @@ file.reference.jcalendar-1.3.2.jar-3=../../../../../MY DATA/DATA PAGE/JAVA/Sotwa
 file.reference.jcalendar-1.3.2.jar-5=E:\\SKRIPSI TERBARU\\SKRIPSI OK\\SKRIPSI 2018\\Program Baru\\lib\\jcalendar-1.3.2.jar
 file.reference.jcalendar-1.3.2.jar-6=E:\\SKRIPSI TERBARU\\SKRIPSI OK\\SKRIPSI 2018\\Atom\\lib\\jcalendar-1.3.2.jar
 file.reference.jcalendar-1.3.2.jar-7=lib\\jcalendar-1.3.2.jar
+file.reference.jcalendar-1.4.jar=jcalendar-1.4.jar
 file.reference.jcommon.jar-3=E:\\SKRIPSI TERBARU\\SKRIPSI OK\\SKRIPSI 2018\\Program Baru\\lib\\jcommon.jar
 file.reference.jcommon.jar-4=E:\\SKRIPSI TERBARU\\SKRIPSI OK\\SKRIPSI 2018\\Atom\\lib\\jcommon.jar
 file.reference.jcommon.jar-5=lib\\jcommon.jar
@@ -144,7 +145,8 @@ javac.classpath=\
     ${file.reference.jfreechartCC.jar-5}:\
     ${file.reference.jhall.jar-5}:\
     ${file.reference.mail.jar-5}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar-4}
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar-4}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
